Closed Bug 1688292 Opened 3 years ago Closed 3 years ago

Non-unified build errors in netwerk/cache2

Categories

(Core :: Networking: Cache, defect, P3)

defect

Tracking

()

RESOLVED FIXED
87 Branch
Tracking Status
firefox87 --- fixed

People

(Reporter: away, Assigned: away)

References

Details

(Whiteboard: [necko-triaged])

Attachments

(1 file)

I tried to de-unify these files in order to get a reduced repro for a compiler bug, but I ran into a bunch of errors.

This is a drive-by fix while I was looking into something else.

Blocks: non-unified
Severity: -- → S3
Priority: -- → P3
Whiteboard: [necko-triaged]
Pushed by dmajor@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/712a4b0f91c3
Fix non-unified build errors in netwerk/cache2/ r=necko-reviewers,valentin
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 87 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: