Bug 1688292 - Fix non-unified build errors in netwerk/cache2/ r=necko-reviewers,valentin

This is a drive-by fix while I was looking into something else.

Differential Revision: https://phabricator.services.mozilla.com/D102795